# mediocre-trivia

./: .gitignore  pyproject.toml
sql/: 0001_quiz_templates.sql  0002_quizzes.sql  0003_teams.sql  0004_questions.sql  0005_quiz_teams.sql  0006_quiz_questions.sql  0007_answered_questions.sql  0008_possible_answers.sql
src/mediocre_trivia/: __init__.py  __main__.py
src/mediocre_trivia/endpoints/: __init__.py
tests/: test_mediocre_trivia.py
